Prevent horizontal overflow.

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -15,6 +15,11 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: $font-family-base;
@@ -23,7 +28,6 @@ body {
   color: $body-color;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 img,
